[package]
name = "astar_lib"
version = "0.1.0"
edition = "2024"
description = "A Star algorithm for two dimensional navigations graphs."
repository = "https://github.com/Carbonfreezer/Rust-A-Star"
license = "MIT"
keywords = ["gamedev", "graphs", "navigation"]
readme = "README.md"

[dev-dependencies]
rand = "0.9.2"
glume = "0.7.2"

[lib]
name = "astar_lib"

[[example]]
name = "openglapp"
